# euro2022-kopie

./: Procfile  README.md  df_assists_to_xg.csv  df_goals_xg.csv  df_iv_position_at_opponent_goal_kick.csv  df_kpis.csv  df_passed_opponents.csv  pyproject.toml  requirements.txt  setup.sh  streamlit_app.py
notebooks/: explore.ipynb  line_breaking_passes.ipynb  mean_iv_distance.ipynb  ml_model.ipynb  pass.ipynb  player_stats.ipynb  towards_production.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
opponent_analysis/: config.py  data.py  kpis.py  preprocessing.py
tests/: test_get_center_ids.py
